finished search component and fixed navbar and body spacing

--- a/giftlink-frontend/public/static/app-background.css
+++ b/giftlink-frontend/public/static/app-background.css
@@ -1,9 +1,13 @@
+
 /* Task 1: Style the body */
+
+
 body {
     font-family: 'Montserrat', 'sans-serif';
     margin: 0;
     padding: 0;
     height: 100vh;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,19 +16,7 @@ body {
     background-position: center;
 }
 
-/* Task 2: Create a pseudo-element for the background and blur */
-body::before {
-    content: '';
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: 'url("./static/home-background.jpg") no-repeat center center';
-    background-size: cover;
-    z-index: -1;
-    filter: blur(8px);
-}
+
 
 /* Task 3: Style the content area */
 .container {
@@ -38,6 +30,7 @@ body::before {
     padding: 20px;
     background: linear-gradient(to right, rgba(255, 255, 255, 0.174), rgba(33, 143, 183, 0.201));
     border-radius: 20px;
+    overflow-x: hidden;
 }
 
 /* Task 4: Add styles for headings, paragraphs, and buttons */
